switch to paper plugin and MiniMessage format